--- a/orchestrator-salt/src/main/resources/salt/salt/nginx/conf/clouderamanager-ssl-user-facing.conf
+++ b/orchestrator-salt/src/main/resources/salt/salt/nginx/conf/clouderamanager-ssl-user-facing.conf
@@ -5,7 +5,7 @@ map $http_upgrade $connection_upgrade {
 
 log_format main '$remote_addr - $remote_user [$time_local] '
                                '"$request" $status $bytes_sent '
-                               '"$http_referer" "$http_user_agent" "$request_id"';
+                               '"$http_referer" "$http_user_agent" "$request_id" $request_time';
 access_log /var/log/nginx/access.log main;
 
 upstream knox {
