CB-21006 - DataHub - Flow changes to support mounting Ephemeral volumes & modify config for log and local directories for services on ClouderaManager.
1. skip cluster stop validation if node roles are not blacklisted
2. stop compute service in CM
3. update salt grain properties
4. stop group
5. change instance type
6. start instance group
7. update CM config
8. update cbdb

--- a/mock-thunderhead/src/main/resources/application.yml
+++ b/mock-thunderhead/src/main/resources/application.yml
@@ -57,7 +57,7 @@ auth:
     datahub:
       runtime.upgrade.enable: true
       os.upgrade.enable: true
-      instancetypes.enable: false
+      instancetypes.enable: true
     ccmv2.enable: false
     ccmv2jumpgate.enable: false
     ccmv2.useOneWayTls: false
