--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,7 @@ org.gradle.configureondemand=true
 org.gradle.caching=true
 org.gradle.logging.level=lifecycle
 org.gradle.jvmargs=-Xmx4096m
+org.gradle.daemon=false
 
 # Version definitions have been moved to dependencies.gradle
 
