--- a/freeipa/src/main/resources/application.yml
+++ b/freeipa/src/main/resources/application.yml
@@ -34,9 +34,14 @@ management:
         "[http.server.requests]": "125ms, 250ms, 500ms, 1s, 2s"
       percentiles:
         "[http.server.requests]": "0.5, 0.95"
-cdp.structuredevent:
-  rest:
-    contentlogging: true
+
+cdp:
+  apiendpoint:
+    url:
+  structuredevent:
+    rest:
+      contentlogging: true
+
 freeipa:
   verticalScalingSupported: AWS,GCP,MOCK,AZURE
   cert.dir: /certs/
